# ACOG

./: .gitignore  CLAUDE.md  docker-compose.yml  technicalproposal.txt
.claude/agents/: acog-backend-engineer.md  acog-frontend-nextjs.md  acog-reviewer-qa.md  acog-systems-architect.md
apps/api/: .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 20241205_0001_001_initial_schema.py  20241205_0002_002_add_youtube_channel_id.py
apps/api/scripts/: manual_smoke_run.py
apps/api/src/acog/: __init__.py  main.py
apps/api/src/acog/api/: __init__.py
apps/api/src/acog/api/v1/: __init__.py  assets.py  audio.py  auth.py  channels.py  episodes.py  health.py  jobs.py  pipeline.py
apps/api/src/acog/core/: __init__.py  config.py  database.py  dependencies.py  exceptions.py  rate_limit.py  security.py
apps/api/src/acog/integrations/: __init__.py  base_client.py  elevenlabs_client.py  heygen_client.py  openai_client.py  runway_client.py  storage_client.py
apps/api/src/acog/models/: __init__.py  asset.py  base.py  channel.py  enums.py  episode.py  job.py
apps/api/src/acog/schemas/: __init__.py  asset.py  channel.py  common.py  episode.py  job.py
apps/api/src/acog/services/: __init__.py  metadata.py  planning.py  script_revision.py  scripting.py
apps/api/src/acog/workers/: __init__.py  celery_app.py  utils.py
apps/api/src/acog/workers/tasks/: __init__.py  maintenance.py  orchestrator.py  pipeline.py
apps/api/tests/: __init__.py  conftest.py  test_channels.py  test_episodes.py  test_health.py  test_pipeline_integration.py  test_rate_limit.py
apps/dashboard/: .env.example  README.md  next.config.js  package-lock.json  package.json  tailwind.config.js
apps/dashboard/app/: globals.css  layout.tsx  page.tsx
apps/dashboard/app/channels/: page.tsx
apps/dashboard/app/channels/[id]/: page.tsx
apps/dashboard/app/episodes/: page.tsx
apps/dashboard/app/episodes/[id]/: page.tsx
apps/dashboard/components/assets/: AssetList.tsx  AssetViewer.tsx  index.ts
apps/dashboard/components/audio/: AudioGenerator.tsx  VoiceSelector.tsx  index.ts
apps/dashboard/components/channels/: ChannelList.tsx  CreateChannelForm.tsx  index.ts
apps/dashboard/components/episodes/: CostSummary.tsx  CreateEpisodeForm.tsx  EpisodeFailurePanel.tsx  EpisodeList.tsx  MetadataViewer.tsx  PipelineStatus.tsx  PlanViewer.tsx  ScriptEditor.tsx  index.ts
apps/dashboard/components/layout/: Header.tsx  Sidebar.tsx  index.ts
apps/dashboard/components/ui/: Alert.tsx  Badge.tsx  Button.tsx  Card.tsx  Input.tsx  Modal.tsx  Spinner.tsx  index.ts
apps/dashboard/hooks/: index.ts  useAssets.ts  useChannel.ts  useChannels.ts  useEpisode.ts  useEpisodes.ts  useJobs.ts  usePipelineStatus.ts  useVoices.ts
apps/dashboard/lib/: api.ts  types.ts  utils.ts
docs/architecture/: 00-architecture-review.md  01-repository-structure.md  02-database-schema.md  03-api-contracts.md
